Fix images on mobile sites and add header for dagger workmanager article

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -10,6 +10,7 @@ body {
 img[src*='#center'] {
     display: block;
     margin: auto;
+    max-width: 100%;
 }
 
 .mdl-page-title {
